Fix on mobile
Виправляє баг на мобілці

--- a/src/assets/scss/components/_modal-footer.scss
+++ b/src/assets/scss/components/_modal-footer.scss
@@ -140,6 +140,9 @@
     transition: border var(--transition-timing-function) var(--animation-speed);
     font-size: 18px;
     line-height: calc(30 / 18);
+    @media screen and (min-width: 330px) {
+      gap: 15px;
+    }
     @include mq(tablet) {
       font-size: 24px;
       line-height: calc(30 / 24);
